@@ -293,7 +293,7 @@ class Mapper(SubMapperParent):
     
     """
     def __init__(self, controller_scan=controller_scan, directory=None, 
-                 always_scan=False, register=True, explicit=False):
+                 always_scan=False, register=True, explicit=True):
         """Create a new Mapper instance
         
         All keyword arguments are optional.
